Add Config Syslog Pattern page.

--- a/less/app.less
+++ b/less/app.less
@@ -1885,21 +1885,6 @@ i.c-checkbox.fg-checkbox {
                   text-decoration: underline;
                   cursor: pointer;
                 }
-                // &.blue {
-                //   color: #2164a0;
-                // }
-                // &.green {
-                //   color: #2fb046;
-                //   font-weight: bold;
-                // }
-                // &.orange {
-                //   color: #f7af3a;
-                //   font-weight: bold;
-                // }
-                // &.red {
-                //   color: #d1152e;
-                //   font-weight: bold;
-                // }
                 &.permit {
                   color: #fff;
                   font-size: 15px;
@@ -1919,7 +1904,8 @@ i.c-checkbox.fg-checkbox {
                 width: 1px;
               }
               &._severity_,
-              &.severityLevel {
+              &.severityLevel,
+              &.severity {
                 span.severity {
                   float: left;
                   color: #fff;
