--- a/less/app.less
+++ b/less/app.less
@@ -1552,6 +1552,12 @@ i.c-checkbox.fg-checkbox {
                 right: 0;
                 padding: .3em 1em;
               }
+              &.last-left {
+                position: absolute;
+                top: -45px;
+                right: 100px;
+                padding: .3em 1em;
+              }
             }
             .toggle-btn {
               position: absolute;
@@ -1613,7 +1619,8 @@ i.c-checkbox.fg-checkbox {
                 }
               }
               .ip-range-group,
-              .scanner-group {
+              .scanner-group,
+              .incident-group {
                 .group {
                   width: auto;
                   .group-content {
@@ -1641,6 +1648,51 @@ i.c-checkbox.fg-checkbox {
                   select,
                   input {
                     width: 27%;
+                  }
+                }
+              }
+              .incident-group {
+                .group {
+                  &.full {
+                    width: 100% !important;
+                  }
+                  .fg-add, .fg-close {
+                    height: 30px;
+                    margin-top: 30px;
+                  }
+                  .event-content {
+                    width: 100%;
+                    .line {
+                      width: 100%;
+                      display: flex;
+                      .group {
+                        width: 50%;
+                      }
+                    }
+                  }
+                  .event-connection-group {
+                    width: 100%;
+                    span.group {
+                      width: 100% !important;
+                      margin-bottom: 10px;
+                    }
+                  }
+                  .connection-content {
+                    width: 100%;
+                    .line {
+                      width: 100%;
+                      display: flex;
+                      .group {
+                        width: 33%;
+                      }
+                    }
+                  }
+                  .ttp-group {
+                    width: 100%;
+                    span.group {
+                      width: 100% !important;
+                      margin-bottom: 10px;
+                    }
                   }
                 }
               }
