--- a/less/app.less
+++ b/less/app.less
@@ -1414,6 +1414,9 @@ i.c-checkbox.fg-checkbox {
               margin: 0 5px;
             }
           }
+          input.number {
+            width: 65px;
+          }
           .form-group { //For individual form group
             position: relative;
             display: flex;
@@ -1603,6 +1606,15 @@ i.c-checkbox.fg-checkbox {
               }
               #severityLevel {
                 width: 94.5%;
+              }
+              .period {
+                color: var(--primaryContentHeader);
+                margin-top: 5px;
+                .period-checkbox {
+                  float: left;
+                  margin-top: 3px;
+                  margin-right: 5px;
+                }
               }
               label {
                 text-align: left;
