add incident api

--- a/less/app.less
+++ b/less/app.less
@@ -1570,12 +1570,6 @@ i.c-checkbox.fg-checkbox {
                 right: 0;
                 padding: .3em 1em;
               }
-              &.last-left {
-                position: absolute;
-                top: -45px;
-                right: 100px;
-                padding: .3em 1em;
-              }
             }
             .toggle-btn {
               position: absolute;
@@ -1724,6 +1718,9 @@ i.c-checkbox.fg-checkbox {
                   }
                 }
               }
+            }
+            .relatedList {
+              width: 100%;
             }
           }
           .steps-indicator { //For Config Topology Inventory page
