Update HMD logic for scanFile. Make all table header align to the left.

--- a/less/app.less
+++ b/less/app.less
@@ -1791,7 +1791,8 @@ i.c-checkbox.fg-checkbox {
               }
             }
             thead th {
-              text-align: center;
+              text-align: left;
+              padding-left: 30px;
             }
             tbody tr {
               height: 45px;
