fix event connection list

--- a/less/app.less
+++ b/less/app.less
@@ -1570,6 +1570,12 @@ i.c-checkbox.fg-checkbox {
                 right: 0;
                 padding: .3em 1em;
               }
+              &.last-left {
+                position: absolute;
+                top: -45px;
+                right: 100px;
+                padding: .3em 1em;
+              }
             }
             .toggle-btn {
               position: absolute;
