Minor style updates for HMD path and modal buttons.

--- a/less/app.less
+++ b/less/app.less
@@ -393,6 +393,9 @@ i.c-checkbox.fg-checkbox {
     border-top: 1px solid var(--primaryBorder);
   }
 }
+.c-box > footer button {
+  margin: 0;
+}
 .c-la {
   & > .actions {
     background-color: var(--tableRowOdd);
@@ -1919,13 +1922,13 @@ i.c-checkbox.fg-checkbox {
               &._tableMenu_ {
                 width: 1px;
               }
+              &.severity,
               &._severity_,
               &.severityLevel {
                 span.severity {
                   float: left;
                   color: #fff;
                   width: 90px;
-                  margin-left: 20px;
                   padding: 2px;
                   text-align: center;
                   border-radius: 10px;
