Update HMD trigger button logic and styles.

--- a/less/modal.less
+++ b/less/modal.less
@@ -589,8 +589,13 @@ html[data-theme='dark'] {
                 }
               }
               .path-header {
-                width: 96%;
+                flex: 1;
+                width: 80%;
+                text-align: left;
                 margin-top: 1px;
+              }
+              .scan-type {
+                color: #b1b1b1;
               }
             }
             .rule {
@@ -1462,4 +1467,7 @@ html[data-theme='dark'] {
       width: 100%;
     }
   }
+}
+#adminResetPasswordDialog-dialog {
+  width: 260px;
 }
