update incident ui

--- a/less/app.less
+++ b/less/app.less
@@ -1697,6 +1697,13 @@ i.c-checkbox.fg-checkbox {
                         width: 50%;
                       }
                     }
+                    .event-sub {
+                      margin-top: 20px;
+                      .ttp-header {
+                        font-size: large;
+                        font-weight: bold;
+                      }
+                    }
                   }
                   .event-connection-group {
                     width: 100%;
