Update display for line chart stacked and chart x-axis label.

--- a/less/modal.less
+++ b/less/modal.less
@@ -850,13 +850,13 @@ html[data-theme='dark'] {
           right: 0;
           border: 1px solid var(--primaryBorder);
           border-radius: 5px;
-          background-color: #fff;
+          background-color: var(--primaryContentBackground);
           z-index: 100;
           li {
             padding: 5px 10px;
             cursor: pointer;
             &:hover {
-              background-color: #e5e5e5;
+              background-color: var(--tabMenuHover);
             }
           }
         }
