Add Pattern info in Query-open-save dialog.

--- a/less/app.less
+++ b/less/app.less
@@ -1417,6 +1417,9 @@ i.c-checkbox.fg-checkbox {
               margin: 0 5px;
             }
           }
+          input.number {
+            width: 65px;
+          }
           .form-group { //For individual form group
             position: relative;
             display: flex;
@@ -1606,6 +1609,15 @@ i.c-checkbox.fg-checkbox {
               }
               #severityLevel {
                 width: 94.5%;
+              }
+              .period {
+                color: var(--primaryContentHeader);
+                margin-top: 5px;
+              }
+              #periodCheckbox {
+                float: left;
+                margin-top: 3px;
+                margin-right: 5px;
               }
               label {
                 text-align: left;
