Complete logic for Pattern in open/save query. Add Pattern chart in dashboard.

--- a/less/app.less
+++ b/less/app.less
@@ -773,15 +773,15 @@ i.c-checkbox.fg-checkbox {
       flex-wrap: wrap;
       .chart-group {
         width: 24.4%;
-        height: 400px;
+        height: 460px;
         margin: 5px;
+        background-color: var(--primaryContentBackground);
         border: 1px solid var(--primaryBorder);
         border-radius: 5px;
-        background-color: var(--primaryContentBackground);
         overflow: hidden;
-        &.bar {
+        &.bar,
+        &.line {
           width: 49.32%;
-          height: 460px;
         }
         .main-table {
           &.align-center {
