--- a/less/modal.less
+++ b/less/modal.less
@@ -1348,6 +1348,10 @@ html[data-theme='dark'] {
     width: 200px;
     height: 35px;
     margin-bottom: 10px;
+    &.dropdown {
+      width: 200px;
+      margin-right: 5px;
+    }
   }
   .filter-group {
     clear: both;
