Continue implementing the UI Framework for Dashboard.

--- a/less/app.less
+++ b/less/app.less
@@ -780,6 +780,12 @@ i.c-checkbox.fg-checkbox {
       div {
         height: 100%;
       }
+      .c-table {
+        width: 100%;
+        tbody td {
+          text-align: center;
+        }
+      }
     }
     .charts {
       width: 100%;
