Begin the new Syslog config host page.

--- a/less/app.less
+++ b/less/app.less
@@ -1761,6 +1761,36 @@ i.c-checkbox.fg-checkbox {
             }
           }
         }
+        .config-syslog {
+          .host-info {
+            margin: 10px;
+            background-color: var(--primaryContentBackground);
+            header {
+              font-size: 1.1em;
+              font-weight: bold;
+              color: var(--primaryContentHeader);
+            }
+            & > header {
+              padding: 10px 15px;
+              border-bottom: 1px solid var(--primaryBorder);
+            }
+            .host-content {
+              position: relative;
+              padding: 15px;
+              .status {
+                display: block;
+                margin-bottom: 15px;
+              }
+              .main-table {
+                width: 100%;
+                margin-top: 15px;
+              }
+              .content-header-btns {
+                top: 35px;
+              }
+            }
+          }
+        }
         .subtab-menu {
           li {
             font-size: 1.1em;
@@ -1777,6 +1807,22 @@ i.c-checkbox.fg-checkbox {
           margin: 0;
           .dropdown-margin {
             margin-left: 50px;
+          }
+        }
+        .main-table {
+          td.property {
+            .flex-item {
+              display: flex;
+              flex-wrap: wrap;
+            }
+            .permit {
+              font-size: 15px;
+              color: #fff;
+              padding: 5px 10px;
+              margin: 5px 2px;
+              border-radius: 5px;
+              background-color: var(--primaryContentHeader);
+            }
           }
         }
         .table-content .table {
@@ -1917,14 +1963,6 @@ i.c-checkbox.fg-checkbox {
                 //   color: #d1152e;
                 //   font-weight: bold;
                 // }
-                &.permit {
-                  font-size: 15px;
-                  color: #fff;
-                  padding: 5px 10px;
-                  margin: 5px 2px;
-                  border-radius: 5px;
-                  background-color: var(--primaryContentHeader);
-                }
               }
               &.align-center {
                 text-align: center;
