Implement the new Config Syslog Host page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1456,8 +1456,15 @@ html[data-theme='dark'] {
   }
 }
 #editHostDialog-content {
-  .group {
-    margin-bottom: 5px;
+  width: 350px;
+  .syslog {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    .group {
+      margin-bottom: 15px;
+    }
   }
 }
 #editHostDialog-dialog,
