--- a/less/app.less
+++ b/less/app.less
@@ -1762,14 +1762,14 @@ i.c-checkbox.fg-checkbox {
           }
         }
         .config-syslog {
+          header {
+            font-size: 1.1em;
+            font-weight: bold;
+            color: var(--primaryContentHeader);
+          }
           .host-info {
             margin: 10px;
             background-color: var(--primaryContentBackground);
-            header {
-              font-size: 1.1em;
-              font-weight: bold;
-              color: var(--primaryContentHeader);
-            }
             & > header {
               padding: 10px 15px;
               border-bottom: 1px solid var(--primaryBorder);
@@ -1788,6 +1788,28 @@ i.c-checkbox.fg-checkbox {
               .content-header-btns {
                 top: 35px;
               }
+            }
+          }
+          .host-list {
+            position: relative;
+            height: 78vh;
+            overflow-y: auto;
+            padding: 20px 100px;
+            background-color: #fff;
+            header {
+              margin-bottom: 15px;
+            }
+            table {
+              width: 100%;
+              &.info {
+                margin-bottom: 50px;
+              }
+            }
+            .add-host {
+              position: absolute;
+              top: 185px;
+              right: 100px;
+              padding: .3em 1em;
             }
           }
         }
@@ -1810,6 +1832,9 @@ i.c-checkbox.fg-checkbox {
           }
         }
         .main-table {
+          tbody tr {
+            height: 45px;
+          }
           td.property {
             .flex-item {
               display: flex;
