Add data exceed message for pagination. Remove port number check for Syslog

--- a/less/app.less
+++ b/less/app.less
@@ -2117,7 +2117,13 @@ i.c-checkbox.fg-checkbox {
       }
     }
   }
-  .pagination { //TODO!
+  .page-nav {
+    .c-info {
+      padding-top: 8px;
+      padding-left: 5px;
+    }
+  }
+  .pagination {
     label {
       margin-right: 5px;
     }
