Implement API for new Syslog config page.

--- a/less/app.less
+++ b/less/app.less
@@ -1840,8 +1840,16 @@ i.c-checkbox.fg-checkbox {
               position: relative;
               padding: 15px;
               .status {
+                position: relative;
                 display: block;
                 margin-bottom: 15px;
+                .fg-recode {
+                  position: absolute;
+                  top: 0;
+                }
+                .text {
+                  margin-left: 22px;
+                }
               }
               .main-table {
                 width: 100%;
