Fix bugs for Config Syslog pages.

--- a/less/modal.less
+++ b/less/modal.less
@@ -956,7 +956,7 @@ html[data-theme='dark'] {
       .scan-wrapper {
         margin-top: 5px;
         .scan-section {
-          width: 690px;  
+          width: 99%;
         }
       }
     }
@@ -991,7 +991,7 @@ html[data-theme='dark'] {
       .scan-wrapper {
         min-height: 440px;
         .scan-section {
-          width: 905px;  
+          width: 99%;
         }
       }
     }
