Update style for Config Edge modules.

--- a/less/app.less
+++ b/less/app.less
@@ -2214,7 +2214,7 @@ i.c-checkbox.fg-checkbox {
                 }
               }
               &.description {
-                span {
+                span.header {
                   color: var(--primaryContentHeader);
                 }
                 button {
