--- a/less/app.less
+++ b/less/app.less
@@ -533,6 +533,7 @@ i.c-checkbox.fg-checkbox {
       &.right {
         float: right;
         margin-top: 1px;
+        margin-left: 10px;
       }
       button {
         color: var(--buttonTextColor);
@@ -569,8 +570,7 @@ i.c-checkbox.fg-checkbox {
       color: #fff;
     }
     .search-options {
-      position: absolute;
-      top: 5px;
+      float: right;
       select,
       input {
         color: var(--primaryTextColor);
