--- a/less/modal.less
+++ b/less/modal.less
@@ -981,7 +981,7 @@ html[data-theme='dark'] {
     .info-content {
       .table {
         max-height: 405px;
-        width: 885px;
+        width: 100%;
       }
       .scan-content {
         .list {
@@ -1381,4 +1381,143 @@ html[data-theme='dark'] {
 }
 #adminResetPasswordDialog-dialog {
   width: 260px;
+}
+#addThreatsDialog-content {
+  width: 900px;
+  height: 620px;
+  .upload-btn {
+    font-size: 16px;
+    margin: 5px 0;
+    .fg-data-upload {
+      float: left;
+    }
+  }
+  .syslogs {
+    display: flex;
+    margin-bottom: 5px;
+    width: 55em;
+    .syslog {
+      flex: 1;
+    }
+    input {
+      margin-top: 0.55em;
+      margin-left: 1em;
+    }
+    select{
+      margin-top: 0.55em;
+      margin-left: 0.5em;
+      width: 18%;
+      &.DEFINED_IOC_ALERT{
+        color: #D99857;
+      }
+      &.DEFINED_IOC_WARNING{
+        color: #76bc29;
+      }
+      &.DEFINED_IOC_NOTICE{
+        color: #57D998;
+      }
+      &.DEFINED_IOC_CRITICAL{
+        color: #57C3D9;
+      }
+      &.DEFINED_IOC_EMERGENCY{
+        color: #CC2943;
+      }
+    }
+  }
+  .filters {
+    margin-top: 10px;
+    label {
+      color: #4d86e2;
+    }
+    textarea {
+      resize: none;
+    }
+    .scrollY {
+      max-height: 410px;
+      overflow-y: auto;
+    }
+    .left-syslog {
+      float: left;
+      width: 58%;
+      min-height: 330px;
+      &.border {
+        border: 1px solid #d9d9d9;
+        border-radius: 5px;
+      }
+      .fg-down {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 50%;
+        visibility: hidden;
+      }
+      button {
+        position: absolute;
+        right: 0;
+        top: -8px;
+        padding: .2em .8em;
+      }
+    }
+    .right-syslog {
+      float: right;
+      width: 40%;
+      min-height: 450px;
+      padding: 15px 15px 20px 15px;
+      border: 1px solid #d9d9d9;
+      border-radius: 5px;
+      &.no-padding {
+        padding: 0;
+      }
+    }
+  }
+  #threatMultiInputs {
+    .group {
+      border: 1px solid #d9d9d9;
+      border-radius: 5px;
+      margin-top: 10px;
+      background-color: #f5f5f5;
+    }
+    .relationship {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      width: 90%;
+      .up {
+        display: flex;
+        padding: 5px 5px;
+      }
+      .down {
+        padding: 5px 5px;
+        .table-100 {
+          width: 100%;
+        }
+        table {
+          border: 1px solid #CCCCCC;
+          border-radius: 5px;
+        }
+      }
+      .item {
+        margin-left: 10px;
+        label {
+          color: #4d86e2;
+        }
+        select {
+          width: 200px;
+        }
+      }
+      .fg-next {
+        margin-top: 30px;
+        margin-left: 10px;
+      }
+    }
+    .remove {
+      height: 30px;
+      width: 30px;
+      margin-top: 10px;
+      background-color: white;
+    }
+    .add {
+      height: 30px;
+      width: 30px;
+      margin-top: 10px;
+    }
+  }
 }
