Continue working on the Config Edge Add Threats page.

--- a/less/app.less
+++ b/less/app.less
@@ -1301,6 +1301,7 @@ i.c-checkbox.fg-checkbox {
               }
               input {
                 width: 185px;
+                height: 36px;
               }
               select {
                 width: auto;
@@ -1348,6 +1349,15 @@ i.c-checkbox.fg-checkbox {
                       margin-right: 3px;
                     }
                   }
+                }
+              }
+              &.edge-threats {
+                select {
+                  min-width: auto;
+                  width: 130px
+                }
+                input {
+                  width: 250px;
                 }
               }
             }
