Minor updates on Threats severity and their styles.

--- a/less/app.less
+++ b/less/app.less
@@ -1047,19 +1047,19 @@ i.c-checkbox.fg-checkbox {
           font-size: 1em;
           margin-top: 3px;
           margin-right: 3px;
-          &.Emergency {
+          &.emergency {
             color: #CC2943;
           }
-          &.Alert {
+          &.alert {
             color: #CC7B29;
           }
-          &.Critical {
+          &.critical {
             color: #29B0CC;
           }
-          &.Warning {
+          &.warning {
             color: #29CC7A;
           }
-          &.Notice {
+          &.notice {
             color: #7ACC29;
           }
         }
