add decoder table

--- a/less/app.less
+++ b/less/app.less
@@ -722,6 +722,25 @@ footer.footer {
 			overflow-x: auto;
 			overflow: hidden;
 			white-space: nowrap;
+
+			.table-kpi {
+				border: 1px solid #ccc;
+				border-radius: 5px;
+				white-space: pre-wrap;
+				word-break: break-all;
+				margin: 10px;
+				margin-top: 30px;
+
+				.c-table {
+					width: 100%;
+				}
+				.fg-close {
+					position: absolute;
+					top: 5px;
+					right: 5px;
+				}
+			}
+
 			.file-options {
 				display: flex;
 				margin: 25px 25px 15px 25px;
